--- a/mage.html
+++ b/mage.html
@@ -18,13 +18,13 @@
 <body>
 	<h1>WE LOVE RCB</h1>
 
-	<img src="C:\Users\CC-LAB2-`13\Desktop\html\projects/rcb.jpg" width="446" height="184" usemap="#image_map">
+	<img src="rcb.jpg" width="446" height="184" usemap="#image_map">
 <map name="image_map">
   <area alt="Virat_Kohli" title="Virat_Kohli" href="https://en.wikipedia.org/wiki/Virat_Kohli" coords="65,19,144,129" shape="rect">
   <area alt="Faf_du_Plessis" title="Faf_du_Plessis" href="https://en.wikipedia.org/wiki/Faf_du_Plessis" coords="173,14,266,122" shape="rect">
   <area alt="Glenn_Maxwell" title="Glenn_Maxwell" href="https://en.wikipedia.org/wiki/Glenn_Maxwell" coords="299,14,389,126" shape="rect">
 </map>
-<img src="C:\Users\CC-LAB2-`13\Desktop\html\projects/rcb2.jpg" width="900" height="900" usemap="#image_map2">
+<img src="rcb2.jpg" width="900" height="900" usemap="#image_map2">
 <map name="image_map2">
   <area alt="Royal_Challengers_Bangalore" title="Royal_Challengers_Bangalore" href="https://en.wikipedia.org/wiki/Royal_Challengers_Bangalore" coords="34,50,831,1247" shape="rect">
 </map>
