--- a/form.html
+++ b/form.html
@@ -21,6 +21,7 @@
 		body{
 			padding-left: 400px;
 			padding-right: 400px;
+			background-color:lightgreen;
 		}
 		input[type=submit]{
 		background-color: yellow;	
