--- a/portfolio.html
+++ b/portfolio.html
@@ -14,10 +14,10 @@
     	</header>
     	<main>
     		<section id="home">
-    		<h2>viswa teja</h2>
+    		<h2>KESARI RAJA SUHASH</h2>
     		<P><b>I BELIVE IN</b><br><br>EAT();PLAY();SLEEP();REPEAT();
     		</P>
-    		<img src="images.jpeg">
+    		<img src="https://upload.wikimedia.org/wikipedia/en/2/2f/Jerry_Mouse.png">
     		</section>
     		<section id="about">
     		<h2>ABOUT</h2>
@@ -40,7 +40,7 @@
     		</selection>
     		<selection id="contact">
     			<h2>contact me</h2>
-    			<p>☎️-9948547136<br><br>✉️-viswatejainti000@gmail.com</p>
+    			<p>☎️-7981922457<br><br>✉️-rajasuhashkesari@gmail.com</p>
     		</selection>
     	</main>
     	<footer>
